get live changes (2020-04-27)

--- a/sections/ss-footer.liquid
+++ b/sections/ss-footer.liquid
@@ -1,49 +1,4 @@
 <footer class="footer hs-search-hidden" id="footer">
-  
-<!--   <section class="footer__top-row">
-    <div class="container flex flex--row flex--wrap flex--vertical-top">
-      <h4 class="flex__item col-3 col-4--tablet-only footer__products-title text-uppercase">Check out our other lawn and garden products:</h4>
-      <ul class="flex__item col-9 col-8--tablet-only footer__products flex flex--row flex--wrap flex--has-gutter flex--has-gutter-phone flex--has-gutter-small">
-        
-        <li class="flex__item col-2 col-4--tablet-only col-4--mobile-only">
-          <a class="footer__product" href="https://soil3.com/" title="" target="_blank">
-            <img alt="Soil3" class="footer__product-image" src="https://www.supersod.com/hs-fs/hubfs/logos/soil3%20logo%20full.jpg?width=140&amp;name=soil3%20logo%20full.jpg" srcset="https://www.supersod.com/hs-fs/hubfs/logos/soil3%20logo%20full.jpg?width=140&amp;name=soil3%20logo%20full.jpg 1x, https://www.supersod.com/hs-fs/hubfs/logos/soil3%20logo%20full.jpg?width=280&amp;name=soil3%20logo%20full.jpg 2x">
-          </a>
-        </li>
-        
-        <li class="flex__item col-2 col-4--tablet-only col-4--mobile-only">
-          <a class="footer__product" href="https://shop.soil3.com/products/big-yellow-bag" title="" target="_blank">
-            <img alt="New_Big_Yellow_Bag white" class="footer__product-image" src="https://www.supersod.com/hs-fs/hubfs/New_Big_Yellow_Bag%20white.jpg?width=140&amp;name=New_Big_Yellow_Bag%20white.jpg" srcset="https://www.supersod.com/hs-fs/hubfs/New_Big_Yellow_Bag%20white.jpg?width=140&amp;name=New_Big_Yellow_Bag%20white.jpg 1x, https://www.supersod.com/hs-fs/hubfs/New_Big_Yellow_Bag%20white.jpg?width=280&amp;name=New_Big_Yellow_Bag%20white.jpg 2x">
-          </a>
-        </li>
-        
-        <li class="flex__item col-2 col-4--tablet-only col-4--mobile-only">
-          <a class="footer__product" href="https://shop.soil3.com/products/docs-single-raised-garden-kit" title="" target="_blank">
-            <img alt="wire-hawk-logo-vertical" class="footer__product-image" src="https://www.supersod.com/hubfs/Wire%20Hawk/wire-hawk-logo-vertical.svg" srcset="https://www.supersod.com/hubfs/Wire%20Hawk/wire-hawk-logo-vertical.svg 1x, https://www.supersod.com/hubfs/Wire%20Hawk/wire-hawk-logo-vertical.svg 2x">
-          </a>
-        </li>
-        
-        <li class="flex__item col-2 col-4--tablet-only col-4--mobile-only">
-          <a class="footer__product" href="https://shop.soil3.com/products/soil3-level-mix" title="" target="_blank">
-            <img alt="Soil3 Level Mix" class="footer__product-image" src="https://www.supersod.com/hubfs/logos/soil3-level-mix-logo.svg" srcset="https://www.supersod.com/hubfs/logos/soil3-level-mix-logo.svg 1x, https://www.supersod.com/hubfs/logos/soil3-level-mix-logo.svg 2x">
-          </a>
-        </li>
-        
-        <li class="flex__item col-2 col-4--tablet-only col-4--mobile-only">
-          <a class="footer__product" href="https://www.supersod.com/products/robotic-mowers" title="" target="_blank">
-            <img alt="Husqvarna Automower logo with products" class="footer__product-image" src="https://www.supersod.com/hs-fs/hubfs/Product%20Images/automower-logo-with-products.jpg?width=140&amp;name=automower-logo-with-products.jpg" srcset="https://www.supersod.com/hs-fs/hubfs/Product%20Images/automower-logo-with-products.jpg?width=140&amp;name=automower-logo-with-products.jpg 1x, https://www.supersod.com/hs-fs/hubfs/Product%20Images/automower-logo-with-products.jpg?width=280&amp;name=automower-logo-with-products.jpg 2x">
-          </a>
-        </li>
-        
-        <li class="flex__item col-2 col-4--tablet-only col-4--mobile-only">
-          <a class="footer__product" href="https://www.supersod.com/products/grass-seed" title="" target="_blank">
-            <img alt="Grass seed bags" class="footer__product-image" src="https://www.supersod.com/hs-fs/hubfs/Product%20Images/seed-footer.jpg?width=140&amp;name=seed-footer.jpg" srcset="https://www.supersod.com/hs-fs/hubfs/Product%20Images/seed-footer.jpg?width=140&amp;name=seed-footer.jpg 1x, https://www.supersod.com/hs-fs/hubfs/Product%20Images/seed-footer.jpg?width=280&amp;name=seed-footer.jpg 2x">
-          </a>
-        </li>
-        
-      </ul>
-    </div>
-  </section> -->
 
   <section class="footer__mobile-row text-center">
 
@@ -103,7 +58,6 @@
           <p>With 7 farms and 13 stores, Super-Sod can provide you with unmatched availability and selection of grasses. 
             We ship throughout Georgia, South Carolina, and North Carolina.</p>
           <p><a class="button button--tertiary" href="//www.supersod.com/free-quote.html">Get a Quote</a></p>
-          <div class="copyright ">Copyright © 2021 Patten Seed Co.</div>
 
         </div><!--end widget-span -->
         <div class="flex__item col-3 col-6--tablet-only footer__col--connect footer__col">
@@ -237,6 +191,15 @@
     </div>
   </section>
   {% endif %}
+  
+  <section class="footer__bottom-row text-center">
+	<div class="container copyright">
+      Copyright © 2021 Patten Seed Co. 
+      <a href="//www.supersod.com/privacy-policy/">Privacy Policy</a>.
+      <a href="https://shop.supersod.com/55488970961/policies/terms-of-service.html">Terms of Service</a>.
+      <a href="https://shop.supersod.com/55488970961/policies/refund-policy.html">Refund Policy</a>.
+    </div>
+  </section>
 </footer>
 
 
