--- a/snippets/ss-header.liquid
+++ b/snippets/ss-header.liquid
@@ -95,7 +95,7 @@
         <div id="hs_cos_wrapper_store_links"
           class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_module navbar__store-links" style=""
           data-hs-cos-general-type="widget" data-hs-cos-type="module"><a class="navbar__store-link hide--desktop"
-            href="https://shop.supersod.com/account/" title="Online store account" aria-label="Online store account">
+            href="/account" title="Online store account" aria-label="Online store account">
             <svg aria-hidden="true" focusable="false" role="presentation" height="28" class="icon icon-account"
               viewbox="0 0 50 50">
               <path
@@ -104,7 +104,7 @@
             </svg>
           </a>
 
-          <a class="navbar__store-link" href="https://shop.supersod.com/cart/" title="Cart" aria-label="Cart">
+          <a class="navbar__store-link" href="/cart" title="Cart" aria-label="Cart">
             <svg aria-hidden="true" focusable="false" role="presentation" height="28" class="icon icon-cart-buggy"
               viewbox="0 0 50 50">
               <path
@@ -367,7 +367,7 @@
           <div id="hs_cos_wrapper_store_links"
             class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_module navbar__store-links" style=""
             data-hs-cos-general-type="widget" data-hs-cos-type="module"><a class="navbar__store-link hide--desktop"
-              href="https://shop.supersod.com/account/" title="Online store account" aria-label="Online store account">
+              href="/account" title="Online store account" aria-label="Online store account">
               <svg aria-hidden="true" focusable="false" role="presentation" height="28" class="icon icon-account"
                 viewbox="0 0 50 50">
                 <path
@@ -376,7 +376,7 @@
               </svg>
             </a>
 
-            <a class="navbar__store-link" href="https://shop.supersod.com/cart/" title="Cart" aria-label="Cart">
+            <a class="navbar__store-link" href="/cart" title="Cart" aria-label="Cart">
               <svg aria-hidden="true" focusable="false" role="presentation" height="28" class="icon icon-cart-buggy"
                 viewbox="0 0 50 50">
                 <path
