--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -225,6 +225,7 @@
           <input class="js-customer-address" type="hidden" name="properties[_address]" value="{{cart.attributes['customer_address']}}">
         </div>
         <p class="hide js-invalid-address product-single__pallet-msg product-single__pallet-msg--unavailable product-single__pallet-msg--wrong-quantity">Please enter a valid address</p>
+        <p class="product-single__warn-msg">{{ 'layout.product.customer_address_extra_info' | t }}</p>
       </fieldset>
 
         <div class="hide">
