get prod code with ascend changes

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -156,7 +156,7 @@
 
   {% include "ss-header" %}
 
-  <div id="page-wrap"
+  <div id="content"
        class="site-wrapper site-wrapper--no-cart-drawer
               {% if show_sidebar == false and show_account_sidebar == false %} site-wrapper--no-sidebar{% endif %}">
 
